[package]
name = "Advent_2018" # the name of the package
version = "0.1.0"    # the current version, obeying semver
authors = ["tuxxi"]
edition = "2018"

[dependencies]
regex = "1.1.0"
lazy_static = "1.2.0"

[[bin]]
name = "day01"
path = "day01/day01.rs"

[[bin]]
name = "day02"
path = "day02/day02.rs"

[[bin]]
name = "day03"
path = "day03/day03.rs"

[[bin]]
name = "day04"
path = "day04/day04.rs"
